--- a/app.css
+++ b/app.css
@@ -1,6 +1,14 @@
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none !important;
+  }
+
 body {
     margin: 0;
     padding: 0;
+}
+
+a {
+text-decoration:  none !important;
 }
 
 .header {
@@ -57,7 +65,9 @@ form {
     color: orangered;
 }
 
-main {
+.main-content {
+    display: flex;
+    justify-content: center;
     margin-top: 60px;
     padding: 0 15px;
 }
@@ -65,11 +75,17 @@ main {
 .wrapper {
 width: 900px;
 margin: 0 auto;
+margin-top: 50px;
 display: flex;
-justify-content: center;
+flex-direction: column;
 }
 
-.btn {
+.home-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.btn-hobby {
     padding: 20px;
     margin-top: 35px;
     color: #000;
@@ -79,6 +95,36 @@ justify-content: center;
     border-radius: 3px;;
 }
 
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
-    display: none !important;
-  }
+.hobby-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 20px 0;
+}
+
+.search input {
+    width: 100%;
+}
+
+.hobbies-list {
+    margin-top: 30px;
+}
+
+.table th {
+    width: 50%;
+}
+
+.table th:first-child {
+    width: 10%;
+}
+
+.btn-create-hobby {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.modal-items {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+}
